@@ -1,9 +1,11 @@
 package entity;
 
+import constants.Constants;
+
 import java.awt.*;
 import java.awt.image.*;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
 public class OverlayManager {
     private final ArrayList<WeatherType> types;
@@ -12,15 +14,17 @@ public class OverlayManager {
     private BufferedImage overlay;
 
     public OverlayManager(int x, int y){
-        this.types = new ArrayList<>();
-        this.types.add(WeatherType.TMP2M);
-        this.types.add(WeatherType.PRECIP);
-        this.types.add(WeatherType.PRESSURE);
-        this.types.add(WeatherType.WIND);
-        this.opacity = new ArrayList<>(Arrays.asList((float)0.5, (float)0.5, (float)0.5, (float)0.5));
-        this.selected = WeatherType.TMP2M;
+        this.types = new ArrayList<>(List.of(WeatherType.values()));
+        this.opacity = new ArrayList<>();
+        initOpacityList();
+        this.selected = WeatherType.values()[0];
         this.overlay = new BufferedImage(x, y, BufferedImage.TYPE_INT_ARGB);
+    }
 
+    private void initOpacityList(){
+        for (int i = 0 ; i < types.size(); i++){
+            this.opacity.add(Constants.DEFAULT_OPACITY);
+        }
     }
 
     public void changeSize(Dimension size){
@@ -41,12 +45,12 @@ public class OverlayManager {
             clearArea(0,0, overlay.getWidth(), (int)(overlay.getHeight()* yFactor));
         }
         if (br.x() > Math.pow(2, zoom) || br.y() > Math.pow(2, zoom)){
-            double xFactor = Math.abs(br.x()) / (br.x() - tl.x());
-            double yFactor = Math.abs(br.y()) / (br.y() - tl.y());
-            clearArea((int)(overlay.getWidth() * (1 - xFactor)), 0,
-                    (int)(overlay.getWidth() * xFactor), overlay.getHeight());
-            clearArea(0, (int)(overlay.getHeight()* (1 - yFactor)),
-                    overlay.getWidth(), (int)(overlay.getHeight() * (yFactor)));
+            double xFactor = Math.abs(1 - tl.x()) / (br.x() - tl.x());
+            double yFactor = Math.abs(1 - tl.y()) / (br.y() - tl.y());
+            clearArea((int)(overlay.getWidth() * (xFactor)), 0,
+                    overlay.getWidth(), overlay.getHeight());
+            clearArea(0, (int)(overlay.getHeight() * (yFactor)),
+                    overlay.getWidth(), overlay.getHeight());
         }
 
 
